[gd_scene load_steps=2 format=3 uid="uid://main_scene_001"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 60
text = "ANY-TYPE-7"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Phase 1: Core Infrastructure Complete"
horizontal_alignment = 1

[node name="ResourcePanel" type="PanelContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResourceGrid" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/ResourcePanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResourceTitle" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/ResourcePanel/ResourceGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Resources"
horizontal_alignment = 1

[node name="MetalLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/ResourcePanel/ResourceGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Metal: 0"
horizontal_alignment = 1

[node name="CrystalsLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/ResourcePanel/ResourceGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Crystals: 0"
horizontal_alignment = 1

[node name="FuelLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/ResourcePanel/ResourceGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 24
text = "Fuel: 0"
horizontal_alignment = 1

[node name="MenuPanel" type="PanelContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/MenuPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start Game (Phase 2)"

[node name="DataViewerButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Data Viewer"

[node name="DebugButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Print Debug Info"

[node name="Spacer" type="Control" parent="CanvasLayer/MarginContainer/VBoxContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Quit"

[node name="VersionLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "v0.1.0 - Phase 1"
horizontal_alignment = 1
